# OpenXcom

./: .gitignore  .gitmodules  CMakeLists.txt
.tx/: config
android/: .gitignore  AndroidManifest.xml  custom_rules.xml
android/jni/: Application.mk
android/jni/src/: Android.mk  SDL_android_main.c
android/res/values/: strings.xml
android/src/ar/com/daidalos/afiledialog/: FileChooserActivity.java  FileChooserCore.java  FileChooserDialog.java
android/src/ar/com/daidalos/afiledialog/view/: FileItem.java
android/src/org/libsdl/app/: SDLActivity.java
android/src/org/libsdl/openxcom/: DirsConfigActivity.java  FilesystemHelper.java  OpenXcom.java  PreloaderActivity.java  UiVisibilityChanger.java
patches/: README.txt  SDL2-openxcom.patch  SDL2_image-openxcom.patch  SDL2_mixer-openxcom.patch
src/: CMakeLists.txt  OpenXcom.2010.vcxproj  OpenXcom.2010.vcxproj.filters  OpenXcom.2013.sln  OpenXcom.2013.vcxproj  OpenXcom.2013.vcxproj.filters  main.cpp  pch.h
src/Basescape/: BaseInfoState.cpp  BasescapeState.cpp  BasescapeState.h  BuildFacilitiesState.cpp  CraftArmorState.cpp  CraftEquipmentState.cpp  CraftEquipmentState.h  CraftInfoState.cpp  CraftSoldiersState.cpp  CraftSoldiersState.h  CraftWeaponsState.cpp  CraftsState.cpp  DismantleFacilityState.cpp  ManageAlienContainmentState.cpp  ManageAlienContainmentState.h  ManufactureInfoState.cpp  ManufactureStartState.cpp  ManufactureState.cpp  MonthlyCostsState.cpp  NewManufactureListState.cpp  NewResearchListState.cpp  PlaceFacilityState.cpp  PurchaseState.cpp  PurchaseState.h  ResearchInfoState.cpp  ResearchState.cpp  SackSoldierState.cpp  SelectStartFacilityState.cpp  SellState.cpp  SellState.h  SoldierArmorState.cpp  SoldierInfoState.cpp  SoldierMemorialState.cpp  SoldiersState.cpp  StoresState.cpp  TransferBaseState.cpp  TransferConfirmState.cpp  TransferItemsState.cpp  TransferItemsState.h  TransfersState.cpp
src/Battlescape/: AbortMissionState.cpp  ActionMenuState.cpp  ActionMenuState.h  AlienBAIState.cpp  AliensCrashState.cpp  BattlescapeGame.cpp  BattlescapeGame.h  BattlescapeGenerator.cpp  BattlescapeState.cpp  BattlescapeState.h  BattlescapeState.h.orig  BattlescapeState.h.rej  BriefingState.cpp  Camera.cpp  Camera.h  CannotReequipState.cpp  DebriefingState.cpp  InfoboxOKState.cpp  Inventory.cpp  Inventory.h  InventoryState.cpp  Map.cpp  Map.h  MedikitState.cpp  MiniMapState.cpp  MiniMapView.cpp  NoContainmentState.cpp  PrimeGrenadeState.cpp  PrimeGrenadeState.h  PromotionsState.cpp  ScannerState.cpp  UnitInfoState.cpp  UnitInfoState.h  UnitSprite.cpp  UnitSprite.h
src/Engine/: CrossPlatform.cpp  CrossPlatform.h  Flc.cpp  FlcPlayer.cpp  Font.cpp  Game.cpp  InteractiveSurface.cpp  InteractiveSurface.h  Language.cpp  Logger.h  Music.cpp  OpenGL.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  OptionInfo.cpp  OptionInfo.h  Options.cpp  Options.h  Options.inc.h  Palette.cpp  RNG.cpp  Renderer.h  SDLRenderer.cpp  SDLRenderer.h  Screen.cpp  Screen.h  ShaderDraw.h  ShaderDrawHelper.h  ShaderMove.h  ShaderRepeat.h  SoundSet.cpp  State.cpp  State.h  Surface.cpp  Surface.h  SurfaceSet.cpp  SurfaceSet.h  Texture.cpp  Texture.h  UIBuilder.cpp  (+3 more)
src/Engine/Adlib/: adlplayer.cpp  fmopl.cpp
src/Engine/Gfx/: GfxFontData.h  GfxPrimitives.cpp  GfxPrimitives.h
src/Geoscape/: AlienBaseState.cpp  AlienTerrorState.cpp  AllocatePsiTrainingState.cpp  BaseDefenseState.cpp  BaseDestroyedState.cpp  BaseNameState.cpp  BaseNameState.h  BuildNewBaseState.cpp  ConfirmCydoniaState.cpp  ConfirmDestinationState.cpp  ConfirmLandingState.cpp  ConfirmNewBaseState.cpp  CraftErrorState.cpp  CraftPatrolState.cpp  FundingState.cpp  GeoscapeCraftState.cpp  GeoscapeOptionsState.cpp  GeoscapeState.cpp  GeoscapeState.h  Globe.cpp  Globe.h  GraphsState.cpp  InterceptState.cpp  ItemsArrivingState.cpp  LowFuelState.cpp  MonthlyReportState.cpp  MultipleTargetsState.cpp  NewPossibleManufactureState.cpp  NewPossibleResearchState.cpp  ProductionCompleteState.cpp  PsiTrainingState.cpp  ResearchCompleteState.cpp  ResearchRequiredState.cpp  SelectDestinationState.cpp  TargetInfoState.cpp  UfoDetectedState.cpp
src/Interface/: ArrowButton.cpp  ArrowButton.h  BattlescapeButton.cpp  BattlescapeButton.h  Cursor.cpp  ScrollBar.cpp  ScrollBar.h  TextButton.cpp  TextEdit.cpp  TextEdit.h  TextList.cpp  TextList.h
src/Menu/: AbandonGameState.cpp  DeleteGameState.cpp  ErrorMessageState.cpp  IntroState.cpp  ListGamesState.cpp  ListLoadOriginalState.cpp  LoadGameState.cpp  NewBattleState.cpp  NewGameState.cpp  NoteState.cpp  OptionsAdvancedState.cpp  OptionsBaseState.cpp  OptionsBaseState.h  OptionsBattlescapeState.cpp  OptionsControlsState.cpp  OptionsControlsState.h  OptionsLanguageState.cpp  OptionsModsState.cpp  OptionsModsState.h  OptionsState.cpp  OptionsState.h  OptionsSystemState.cpp  OptionsSystemState.h  OptionsVideoState.cpp  OptionsVideoState.h  PauseState.cpp  SavedGameState.cpp  SetWindowedRootState.cpp  StartState.cpp  TestState.cpp  VideoState.cpp
src/Mod/: Mod.cpp  Ruleset.cpp  XcomResourcePack.cpp
src/Resource/: ResourcePack.cpp  XcomResourcePack.cpp
src/Ruleset/: Ruleset.cpp
src/Savegame/: MovingTarget.cpp  SavedBattleGame.cpp  Tile.cpp  Tile.h
src/Ufopaedia/: ArticleState.cpp  ArticleStateArmor.cpp  UfopaediaSelectState.cpp  UfopaediaStartState.cpp
